<resources>
    <string name="app_name">little brain</string>
    <string name="submit">SUBMIT</string>
    <string name="next">NEXT</string>
    <string name="UEn">your Entered</string>
    <string name="msg">Tap next</string>
    <string name="create_text">Create number by using these numbers</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
</resources>