<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
   android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="197dp"
        android:layout_height="124dp"
        android:gravity="center_horizontal"
        android:text="@string/msg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />


    <Button
        android:id="@+id/nextquestion"
        android:layout_width="151dp"
        android:layout_height="69dp"
        android:background="@color/purple_200"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/create_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginBottom="52dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b1"
                android:textSize="36sp"
                tools:ignore="NestedWeights" />

            <Button
                style = "?android:attr/buttonBarButtonStyle"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b2"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/button3"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b3"
                android:textSize="36sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b4"
                style = "?android:attr/buttonBarButtonStyle"
                android:textSize="36sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:text="@string/b5"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b6"
                android:textSize="36sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b7"
                android:textSize="36sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button8"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b8"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b9"
                android:textSize="36sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                style = "?android:attr/buttonBarButtonStyle"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/b0"
                android:textSize="36sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/usernumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UEn"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>